--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "4.8.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
+    "argon2": "^0.30.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
