--- a/package.json
+++ b/package.json
@@ -26,16 +26,21 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "4.8.0",
+    "@types/sharp": "^0.31.1",
     "argon2": "^0.30.2",
+    "aws-sdk": "^2.1288.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.7",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nest-winston": "^1.8.0",
     "pm2": "^5.2.2",
     "prisma": "^4.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sharp": "^0.31.3",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
@@ -45,6 +50,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
