--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
 	"dependencies": {
 		"@nestjs/common": "^9.0.0",
 		"@nestjs/core": "^9.0.0",
@@ -52,6 +55,7 @@
 		"@types/jest": "28.1.4",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^16.0.0",
+		"@types/random-words": "^1.1.2",
 		"@types/supertest": "^2.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.0.0",
@@ -61,6 +65,7 @@
 		"jest": "28.1.2",
 		"prettier": "^2.3.2",
 		"prisma-dbml-generator": "^0.10.0",
+		"random-words": "^1.2.1",
 		"source-map-support": "^0.5.20",
 		"supertest": "^6.1.3",
 		"ts-jest": "28.0.5",
